apps/thelounge/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: irc
  annotations:
    "cni.projectcalico.org/ipv4pools": "[\"pet-ipv4-ippool\"]"
spec:
  finalizers:
  - kubernetes
