apps/thelounge/thelounge.yml
apiVersion: v1
kind: Service
metadata:
  name: thelounge
  namespace: irc
  labels:
    app: thelounge
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9000
    name: thelounge
  selector:
    app: thelounge
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thelounge
  namespace: irc
spec:
  selector:
    matchLabels:
      app: thelounge
  serviceName: thelounge
  replicas: 1
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      nodeName: holo.snofox.net
      containers:
      - name: thelounge
        imagePullPolicy: Always
        image: ghcr.io/thelounge/thelounge:4.5.2@sha256:708fbedbec293e6a80c30300a8786355539035f9ca35751af40d96eec280b710
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 9000
          name: thelounge
        volumeMounts:
        - name: configdir
          mountPath: /var/opt/thelounge
  volumeClaimTemplates:
    - metadata:
        name: configdir
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "freenas-iscsi-csi"
        resources:
          requests:
            storage: 100Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: irc
  name: thelounge-ts
  annotations: {}
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thelounge
            port:
              number: 80
  tls:
  - hosts:
    - lounge
