apps/thelounge/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: thelounge
  namespace: irc
spec:
  podSelector: 
    matchLabels:
      app: thelounge
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow tailscale to http
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: tailscale
      podSelector:
        matchLabels:
          tailscale.com/parent-resource: thelounge-ts
          tailscale.com/parent-resource-ns: irc
    ports:
    - protocol: TCP
      port: 9000
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
          - 169.254.0.0/16
    ports:
    - protocol: TCP
      port: 6697
    - protocol: TCP
      port: 7000
